create sql code for test

--- a/api/sql/sqlc.yml
+++ b/api/sql/sqlc.yml
@@ -1,7 +1,7 @@
 version: 2
 sql:
-  - queries: "./queries.sql"
-    schema:  "./schema.sql"
+  - queries: ["./queries.sql", "./queries.test.sql"]
+    schema:  ["./schema.sql", "./schema.test.sql"]
     engine: "postgresql"
     gen:
       go:
